--- a/src/pages/pixelart/index.css
+++ b/src/pages/pixelart/index.css
@@ -10,7 +10,7 @@
     border-left: 1px solid black;
 }
 
-.unselectable {
+.pixelart-body {
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
@@ -21,4 +21,8 @@
    */
    -ms-user-select: none;
    user-select: none;
+   display: flex;
+   height: 100%;
+   justify-content: space-evenly;
+   align-items: center;
 }
