--- a/src/pages/pixelart/pixel.css
+++ b/src/pages/pixelart/pixel.css
@@ -1,6 +1,6 @@
 .pixel {
-  height: '100%';
-  width: '100%';
-  border-right: '1px solid black';
-  border-bottom: '1px solid black';
+  height: 100%;
+  width: 100%;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
 }
